warehouse/force-app/main/default/objects/Customer__c/fields/Notify_By__c.field-meta.xml
<CustomField>
    <fullName>Notify_By__c</fullName>
    <label>Notify By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
                <default>true</default>
                <label>SMS</label>
            </value>
            <value>
                <fullName>EMail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>