warehouse/force-app/main/default/objects/Customer__c/fields/Notify_On_Low_Deals__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Low_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify On Low Deals</label>
    <type>Checkbox</type>
</CustomField>