warehouse/force-app/main/default/objects/Customer__c/fields/Notify_Orders__c.field-meta.xml
<CustomField>
    <fullName>Notify_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Orders</label>
    <type>Checkbox</type>
</CustomField>