warehouse/force-app/main/default/objects/Customer__c/fields/Order_On_Low_Deals__c.field-meta.xml
<CustomField>
    <fullName>Order_On_Low_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order On Low Deals</label>
    <type>Checkbox</type>
</CustomField>