warehouse/force-app/main/default/objects/Customer__c/fields/SMS_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>SMS_Phone_Number__c</fullName>
    <label>SMS Phone Number</label>
    <type>Phone</type>
</CustomField>