warehouse/force-app/main/default/objects/Customer__c/fields/Twilio_From_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Twilio_From_Phone_Number__c</fullName>
    <label>Twilio From Phone Number</label>
    <type>Phone</type>
</CustomField>