warehouse/force-app/main/default/objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Notify_By__c</columns>
    <columns>Notify_On_Low_Deals__c</columns>
    <columns>Order_On_Low_Deals__c</columns>
    <columns>Notify_Orders__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>